cargo-features = ["strip"]

[package]
name = "comik"
version = "0.1.0"
edition = "2018"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
egui_glium = "0.14.0"
epi = "0.14.0"
glium = "0.30.2"
anyhow = "1.0.44"
image = "0.23.14"
tempfile = "3.2.0"
zip = "0.5.13"
unrar = "0.4.4"
thiserror = "1.0.29"