cargo-features = ["strip"]

[package]
name = "comik"
version = "0.1.0"
edition = "2018"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
egui_glium = { git = "https://github.com/emilk/egui", branch = "master" }
epi = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
glium = "0.30.2"
anyhow = "1.0.44"
image = "0.23.14"
thiserror = "1.0.29"
compress-tools = "0.12.2"